apply plugin: 'java'
apply plugin: 'eclipse'

defaultTasks('zip')

sourceCompatibility = JavaVersion.VERSION_1_10
targetCompatibility = JavaVersion.VERSION_1_10

sourceSets {
	mainSource {
		java {
			srcDir('dist/game/data/scripts')
		}
	}
}

repositories {
    mavenCentral()
}

configurations.all {
    transitive = false
}

dependencies {
	compile 'org.slf4j:slf4j-api:1.7.25'
	compile files('../L2J_Server/dist/libs/mmocore.jar')
	compile project(':L2J_Server')
	testCompile 'org.testng:testng:6.14.3'
	testCompile 'org.mockito:mockito-core:2.20.1'
}

task zip(type: Zip) {
	def fileName = 'L2J_DataPack_' + new Date().format("yyyy-MM-dd")
	baseName = fileName
	from('dist')
	println 'Build in build/distributions/' + fileName + '.zip'
}

build.finalizedBy(zip)

eclipse {
	project {
		name = 'L2J_DataPack'
		comment 'L2J Server Project'
		natures 'org.eclipse.buildship.core.gradleprojectbuilde'
	}
}